--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,75 @@
 /* General styles */
 body {
-  font-family: Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-  padding: 10px;
+	font-family: Arial, sans-serif;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	margin: 0;
+	padding: 10px;
 }
 
 .countdown {
-  font-size: 100px;
-  margin-bottom: 20px;
-  text-align: center;
+	font-size: 100px;
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.cueworkout {
+	font-size: 50px;
+	margin-bottom: 20px;
+	text-align: center;
+}
+
+.cuerounds {
+	font-size: 50px;
+	margin-bottom: 20px;
+	text-align: center;
 }
 
 .input-container {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-  width: 100%;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 10px;
+	width: 100%;
 }
 
 label {
-  margin-bottom: 5px;
+	margin-bottom: 5px;
 }
 
 input[type="number"] {
-  padding: 10px;
-  font-size: 16px;
-  width: 100%;
-  box-sizing: border-box;
+	padding: 10px;
+	font-size: 16px;
+	width: 100%;
+	box-sizing: border-box;
 }
 
 .button-container {
-  display: flex;
-  justify-content: space-between; /* Ensure buttons are spaced */
-  gap: 10px;
-  width: 100%;
+	display: flex;
+	justify-content: space-between;
+	/* Ensure buttons are spaced */
+	gap: 10px;
+	width: 100%;
 }
 
 button {
-  flex: 1; /* Adjust to take equal space */
-  padding: 12px 20px;
-  font-size: 16px;
-  cursor: pointer;
+	flex: 1;
+	/* Adjust to take equal space */
+	padding: 12px 20px;
+	font-size: 16px;
+	cursor: pointer;
 }
 
 /* Media query for mobile devices */
 @media (max-width: 600px) {
-  .button-container {
-    flex-direction: column;
-    align-items: center;
-  }
+	.button-container {
+		flex-direction: column;
+		align-items: center;
+	}
 
-  button {
-    width: 100%;
-  }
+	button {
+		width: 100%;
+	}
 }
