--- a/styles.css
+++ b/styles.css
@@ -74,3 +74,24 @@ button {
     width: 100%;
   }
 }
+
+.switch-container {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  display: flex;
+  align-items: center;
+  gap: 5px; /* Adjust this value for spacing between label and checkbox */
+  color: #000;
+}
+
+input[type="checkbox"] {
+  margin-bottom: 7px; /* Adjust this value to set the space between label and checkbox */
+}
+
+.language-selector {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #000;
+}
